Feat: CountingRocks.BL created

--- a/CountingRocks.Test/CountingRocks.Test.csproj
+++ b/CountingRocks.Test/CountingRocks.Test.csproj
@@ -22,4 +22,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CountingRocks.BL\CountingRocks.BL.csproj" />
+  </ItemGroup>
+
 </Project>
